View Issue Details

IDProjectCategoryView StatusLast Update
0023410Open CASCADEOCCT:Testspublic2012-11-16 13:17
Reporterapn Assigned Toapn  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.5.2 
Target Version6.5.4Fixed in Version6.5.4 
Summary0023410: QA commands don't work properly in new testing system
DescriptionIf we want to use QA commands we should use "pload QAcommands". Command works (e.g. QAxwd_3d), we get a screenshot but there are no any output messages from previous and following commands.
TagsNo tags attached.
Test case numberbugs demo CR23410

Activities

apn

2012-09-04 11:51

administrator   ~0021404

Dear BugMaster,
During investigation this bug was revealed that the problem is in adding command "rename" in QADraw.cxx

Branch CR23410 is ready to test.

mkv

2012-09-04 12:06

tester   ~0021405

Reviewed.

apn

2012-09-05 11:32

administrator   ~0021411

Dear BugMaster,
Branch CR23410 (and products from GIT master) was compiled on Linux and Windows platforms and tested.

Regression:
Not detected

Improvements:
Not detected

Testing case:
bugs demo CR23410 - OK

Test cases
chl 936 H1-H5 J3-J9 K1-K8
chl 927 I9
were modified (command rename was changed to renamevar)

Related Changesets

occt: master 319e4241

2012-09-06 10:24:05

apn

Details Diff
0023410: QA commands don't work properly in new testing system

Comment adding command rename. Add QA test case.
Adjusting bugs test group
Affected Issues
0023410
mod - src/QADraw/QADraw.cxx Diff File
add - tests/bugs/demo/CR23410 Diff File
add - tests/bugs/demo/CR23416 Diff File
mod - tests/bugs/end Diff File
mod - tests/bugs/grids.list Diff File
mod - tests/bugs/iges/CR23377 Diff File
add - tests/bugs/xde/begin Diff File
add - tests/bugs/xde/CR23384 Diff File

Issue History

Date Modified Username Field Change
2012-08-30 16:47 apn New Issue
2012-08-30 16:47 apn Assigned To => vtn
2012-09-04 09:50 apn Assigned To vtn => apn
2012-09-04 09:50 apn Status new => assigned
2012-09-04 11:51 apn Note Added: 0021404
2012-09-04 12:02 apn Test case number => bugs demo CR23410
2012-09-04 12:02 apn Assigned To apn => mkv
2012-09-04 12:02 apn Status assigned => resolved
2012-09-04 12:06 mkv Note Added: 0021405
2012-09-04 12:08 mkv Assigned To mkv => apn
2012-09-04 12:08 mkv Status resolved => reviewed
2012-09-05 11:32 apn Note Added: 0021411
2012-09-05 11:33 apn Assigned To apn => bugmaster
2012-09-05 11:33 apn Status reviewed => tested
2012-09-10 17:08 apn Changeset attached => occt master 319e4241
2012-09-10 17:11 apn Assigned To bugmaster => apn
2012-09-10 17:11 apn Status tested => verified
2012-09-10 17:11 apn Resolution open => fixed
2012-10-01 14:23 bugmaster Target Version => 6.5.4
2012-11-16 13:14 bugmaster Fixed in Version => 6.5.4
2012-11-16 13:17 bugmaster Status verified => closed