0023410: QA commands don't work properly in new testing system

Comment adding command rename. Add QA test case.
Adjusting bugs test group